--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <div class="container">
+  <div class="card">
     <div class="image"></div>
     <p class="Equilibrium">Equilibrium #3429</p>
     <h5>Our Equilibrium collection promotes balance and calm.</h5>
